# polilabs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF_EMBED_PASS.md  Makefile  README.md  fly.toml  frontend_design.md  mcp_server.py  pyproject.toml  railway.toml  schema_design.md  server.py
agent/: README.md  tools.py
api/: README.md  SPEC.md  __init__.py  _impl.py  types.py
auth/: __init__.py  db.py  routes.py  security.py  usage.py
corpus/: README.md  inclusion_criteria.md
data/candidates/: candidates_v1.jsonl  review.csv
data/corpus/: INDEX.json
docs/: polilabs-architecture.tex  polilabs-graph.html
eval/: README.md  agent_eval.py  build_report.py  grades.json  polilabs_agent_eval.tex  queries.yaml  report.py  runner.py  scorer.py
graph/: README.md  build_kuzu.py  extract_amendments.py  extract_citations.py  extract_definitions.py  schema_kuzu.py
index/: README.md  build.py  embeddings.py  hybrid.py  parse_uslm.py  schema.py
ingest/: README.md  candidate.py  govinfo_search.py  promote.py  reconcile.py
research/: README.md  landscape.md  principles.md
scripts/: README.md  api_smoke_test.py  auth_smoke_test.py  backfill_topic.py  build_index.py  build_kuzu_index.py  build_landing_graph.py  chat.py  fetch_candidates.py  fetch_redistricting_seed.py  kuzu_smoke_test.py  promote_corpus.py  run_eval.py  smoke_test.py  test_token_limit.py  verify_hybrid_search.py  web.py
sources/: README.md  congress_gov.py  govinfo.py  olrc.py
static/: index.html
web/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
web-design-a/: Polilabs Design System.html  Polilabs.html  README.md  app.jsx  auth-screen.jsx  auth.css  auth.js  backend.js  bill-viewer.jsx  decomp-panel.jsx  design-system.css  icons.jsx  index.html  landing-graph.json  landing.jsx  left-rail.jsx  styles.css  text-panel.jsx  vercel.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: rest.ts  sse.ts  types.ts
web/src/components/: AgentAnswer.tsx  AmendmentMode.tsx  BillList.tsx  Tag.tsx  (+13 more)
(+693 files in other folders)
