[project]
name = "polilabs"
version = "0.0.1"
description = "Queryable, citation-accurate DB of US federal legislation."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "anthropic>=0.92.0",
    "mcp>=1.0.0",
    "gradio>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "kuzu>=0.11",
    "pyyaml>=6.0",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sources*", "api*", "ingest*", "index*", "agent*", "graph*", "eval*", "auth*"]
